--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Hooray! First HTML page!</h1>
-        <p>Oh yeah! My first paragraph!</p>
+        <p>Oh yay! My first paragraph!</p>
     </body>
 </html>
